@@ -16,7 +16,7 @@ sub parse_arg {
     my ($self, @arg) = @_;
     return (@arg ? @arg : undef) if $self->{sync_all};
     @arg = ('//') if !@arg;
-    return map {$self->arg_depotpath ($_)} @arg;
+    return map {$self->arg_uri_maybe ($_)} @arg;
 }
 
 sub lock { $_[0]->lock_none }
