@@ -14,7 +14,7 @@ our @EXPORT_OK = qw(
     abs_path abs2rel catdir catfile catpath devnull dirname get_anchor 
     move_path make_path splitpath splitdir tmpdir tmpfile
 
-    is_symlink is_executable is_uri can_run
+    is_symlink is_executable is_uri is_empty_path can_run
 );
 our $VERSION = $SVK::VERSION;
 
@@ -605,6 +605,28 @@ sub move_path {
         "Cannot rename %1 to %2; please move it manually.\n",
         $source, $target,
     );
+}
+
+=head3 move_path ($source, $target)
+
+Move a path to another place, creating intermediate directories in the target
+path if neccessary.  If move failed, tell the user to move it manually.
+
+=cut
+
+sub is_empty_path {
+    my ($path) = @_;
+
+    return 1 if !-e $path;
+    return 0 if !-d $path;
+
+    opendir my $dh, $path or die $!;
+    while (my $node = readdir($dh)) {
+        next if $node =~ /^\.\.?$/;
+        return 0 if catdir($path, $node);
+    }
+
+    return 1;
 }
 
 1;
