@@ -6,7 +6,7 @@ our $output;
 
 my ($xd, $svk) = build_test('bob');
 
-is_output_like ($svk, 'ls', ['http://foobar'], qr|not a checkout path|, 'bad path');
+is_output_like ($svk, 'ls', ["there/is/no/spoon"], qr|not a checkout path|, 'bad path');
 
 foreach my $depot ('','bob') {
     my ($copath) = get_copath ("list$depot");
